modify result card

--- a/components/results-summary-component/index.html
+++ b/components/results-summary-component/index.html
@@ -29,7 +29,7 @@
         <div class="card result-card">
           <div class="card-body">
             <div class="result-overview">
-              <h4 class="card-title">Your Result</h4>
+              <h4 class="card-title">Your Result 1</h4>
               <div class="result-score">
                 <span class="result-mark">76</span>
                 <span class="result-total">of 100</span>
