modify increase result summary card size & some design

--- a/components/results-summary-component/styles/main.res.css
+++ b/components/results-summary-component/styles/main.res.css
@@ -28,8 +28,12 @@
   }
 
   .result-score {
-    width: 10rem;
-    height: 10rem;
+    width: 12rem;
+    height: 12rem;
+  }
+
+  .result-score .result-mark {
+    font-size: 4rem;
   }
 }
 
